--- a/_sass/yolo/themes/_corbs.scss
+++ b/_sass/yolo/themes/_corbs.scss
@@ -7,7 +7,7 @@ $light-secondary-color: #32439e;
 $light-accent-color: #0091ea;
 $light-link-color: #ef0c81;
 $light-code-background-color: #000928;
-$light-code-color: #17ba59;
+$light-code-color: #0bbf52;
 
 // dark mode colors
 $dark-primary-color: #061039;
