WIP syntax highlighting

--- a/_sass/yolo/themes/_arcade.scss
+++ b/_sass/yolo/themes/_arcade.scss
@@ -4,7 +4,7 @@
 $light-primary-color: #fbffff;
 $light-secondary-color: #093fc4;
 $light-accent-color: #4113a6;
-$light-code-background-color: #000928;
+$light-code-background-color: #fff;
 $light-code-color: #02b960;
 $light-link-color: #f7346d;
 
