--- a/_sass/yolo/themes/_corbs.scss
+++ b/_sass/yolo/themes/_corbs.scss
@@ -6,7 +6,7 @@ $light-primary-color: #e9f4fe;
 $light-secondary-color: #32439e;
 $light-accent-color: #0091ea;
 $light-link-color: #ef0c81;
-$light-code-background-color: #000928;
+$light-code-background-color: #f8faff;
 $light-code-color: #0bbf52;
 
 // dark mode colors
