--- a/_sass/yolo/themes/_solo.scss
+++ b/_sass/yolo/themes/_solo.scss
@@ -4,15 +4,15 @@
 $light-primary-color: #fff;
 $light-secondary-color: #000;
 $light-accent-color: #000;
-$light-code-background-color: #000;
-$light-code-color: #fff;
+$light-code-background-color: #fff;
+$light-code-color: #000;
 $light-link-color: #2196f3;
 
 $dark-primary-color: #000;
 $dark-secondary-color: #fff;
 $dark-accent-color: #fff;
-$dark-code-background-color: #fff;
-$dark-code-color: #000;
+$dark-code-background-color: #000;
+$dark-code-color: #fff;
 $dark-link-color: #2196f3;
 
 $family-primary: "Inconsolata", sans-serif;
