WIP re-introducing sidebar option

--- a/_sass/yolo/themes/_solo.scss
+++ b/_sass/yolo/themes/_solo.scss
@@ -3,14 +3,14 @@
 // ----------------------------------------------------------------------------
 $light-primary-color: #fff;
 $light-secondary-color: #000;
-$light-accent-color: #000;
+$light-accent-color: #383838;
 $light-code-background-color: #fff;
 $light-code-color: #000;
 $light-link-color: #2196f3;
 
 $dark-primary-color: #000;
 $dark-secondary-color: #fff;
-$dark-accent-color: #fff;
+$dark-accent-color: #b3b2b2;
 $dark-code-background-color: #000;
 $dark-code-color: #fff;
 $dark-link-color: #2196f3;
