--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 {% include head.html %}
 <body id="yolo-site">
   <div class="container center">
+    {% include sidebar.html %}
     <header>
       {% include components/header.html %}
     </header>
