--- a/_sass/yolo/_yolo.scss
+++ b/_sass/yolo/_yolo.scss
@@ -162,6 +162,49 @@
   }
 }
 
+.sidebar {
+  position: fixed;
+  z-index: 50;
+  float: left;
+  top: 0;
+  left: 0;
+  width: 1rem;
+  height: 100%;
+  overflow-x: hidden;
+  transition: 0.5s;
+  border-style: solid;
+  border-right-width: .5rem;
+  border-left-width: 0;
+  border-top-width: 0;
+  border-bottom-width: 0;
+  &:is(:hover) {
+    cursor: pointer;
+  }
+
+  > .inner {
+    width: 100%;
+    height: 100%;
+    padding: 1.5em .5em;
+    overflow-x: hidden;
+
+    nav {
+      ul {
+        line-height: 1;
+        list-style-type: none;
+        margin-bottom: 1.5rem;
+        //padding-bottom: 0.5rem;
+        padding: 1rem;
+        li {
+          margin-bottom: 1rem;
+        }
+        li:before {
+          content: "- ";
+        }
+      }
+    }
+  }
+}
+
 // light-theme colors
 .light-theme {
   color: $light-secondary-color;
@@ -305,6 +348,11 @@
 
   .pill:hover {
     background-color: $light-accent-color;
+  }
+
+  .sidebar {
+    background-color: $light-primary-color;
+    border-left-color: $light-accent-color;
   }
 
   .primary-color {
@@ -544,6 +592,11 @@
 
   .pill:hover {
     background-color: $dark-accent-color;
+  }
+
+  .sidebar {
+    background-color: $dark-primary-color;
+    border-right-color: $dark-secondary-color;
   }
 
   .primary-color {
