--- a/_sass/yolo/themes/_arcade.scss
+++ b/_sass/yolo/themes/_arcade.scss
@@ -1,12 +1,12 @@
 // ----------------------------------------------------------------------------
 // arcade theme
 // ----------------------------------------------------------------------------
-$light-primary-color: #fbffff;
-$light-secondary-color: #093fc4;
+$light-primary-color: #fbfcfc;
+$light-secondary-color: #FF1989;
 $light-accent-color: #4113a6;
 $light-code-background-color: #fff;
-$light-code-color: #02b960;
-$light-link-color: #f7346d;
+$light-code-color: #01a6c8;
+$light-link-color: #02c162;
 
 $dark-primary-color: #000928;
 $dark-secondary-color: #00e676;
