--- a/_sass/yolo/_images.scss
+++ b/_sass/yolo/_images.scss
@@ -8,6 +8,23 @@ $ratio-3-by-4:  75  90  96 120 150 180 192 240 300 360 384 480;
 $ratio-16-by-9: 112 128 144 160 192 224 256 320 400 480 512 640;
 $ratio-9-by-16:  63  72  81  90 108 126 144 180 225 270 288 360;
 
+figure {
+  margin-bottom: 1em;
+}
+
+figure.center {
+  img {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    border-radius: 0.5em;
+  }
+
+  figcaption {
+    text-align: center;
+  }
+}
+
 img {
   display: block;
   position: relative;
