--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,9 @@
 {% include head.html %}
 <body id="yolo-site">
   <div class="container center">
+    {% if site.sidebar %}
     {% include sidebar.html %}
+    {% endif %}
     <header>
       {% include components/header.html %}
     </header>
