--- a/_sass/yolo/themes/_corbs.scss
+++ b/_sass/yolo/themes/_corbs.scss
@@ -18,6 +18,6 @@ $dark-code-background-color: #000928;
 $dark-code-color: #f790c2;
 
 // fonts
-$family-primary: "Source Code Pro", monospace;
+$family-primary: "Inconsolata", monospace;
 $family-secondary: "Raleway", sans-serif;
 $family-monospace: "Red Hat Mono", monospace;
