sidebar and toc working

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,9 +1,5 @@
 <div id="sidebar" class="sidebar">
     <div class="inner">
-        <nav id="sidebar-nav">
-            <ul id="sidebar-nav-links">
-                {% include sidebar-entries.html collection=site.data.sidebar.entries %}
-            </ul>
-        </nav>
+        <div id="toc-sidebar"></div>
     </div>
 </div>
