--- a/_includes/typography.html
+++ b/_includes/typography.html
@@ -2,7 +2,7 @@
   This template is for demonstrating theme fonts on example index.md,
   and not intended to be a reusable template.
 -->
-<h4>Three families</h4>
+<h4 class="no-toc">Three families</h4>
 
 <ul>
     <li class="is-family-primary">Primary Font Family - body and most text</li>
@@ -10,7 +10,7 @@
     <li class="is-monospaced-font">Monospaced Font Family - code</li>
 </ul>
 
-<h4>Primary</h4>
+<h4 class="no-toc">Primary</h4>
 
 <ul class="no-bullets">
     <li class="is-family-primary is-size-7">This is-size-7 text.</li>
@@ -22,7 +22,7 @@
     <li class="is-family-primary is-size-1">This is-size-1 text.</li>
 </ul>
 
-<h4>Secondary</h4>
+<h4 class="no-toc">Secondary</h4>
 
 <ul class="no-bullets">
     <li class="is-family-secondary is-size-7">This is-size-7 text.</li>
@@ -34,7 +34,7 @@
     <li class="is-family-secondary is-size-1">This is-size-1 text.</li>
 </ul>
 
-<h4>Monospace</h4>
+<h4 class="no-toc">Monospace</h4>
 
 <ul class="no-bullets">
     <li class="is-family-monospace is-size-7">This is-size-7 text.</li>
