--- a/_sass/yolo/themes/_corbs.scss
+++ b/_sass/yolo/themes/_corbs.scss
@@ -10,14 +10,14 @@ $light-code-background-color: #f8faff;
 $light-code-color: #6843c8;
 
 // dark mode colors
-$dark-primary-color: #061039;
+$dark-primary-color: #000928;
 $dark-secondary-color: #fb1d9e;
 $dark-accent-color: #00b0ff;
 $dark-link-color: #65e9fc;
-$dark-code-background-color: #000928;
+$dark-code-background-color: #01081f;
 $dark-code-color: #f790c2;
 
 // fonts
-$family-primary: "Inconsolata", monospace;
+$family-primary: "IBM Plex Mono", monospace;
 $family-secondary: "Raleway", sans-serif;
 $family-monospace: "Red Hat Mono", monospace;
