--- a/_sass/yolo/themes/_weekly.scss
+++ b/_sass/yolo/themes/_weekly.scss
@@ -18,6 +18,6 @@ $dark-code-background-color: #000a12;
 $dark-code-color: #c4feee;
 
 // fonts
-$family-primary: "Hepta Slab", serif;
+$family-primary: "Bitter", serif;
 $family-secondary: "Raleway", sans-serif;
 $family-monospace: "Red Hat Mono", monospace;
