--- a/css/main.scss
+++ b/css/main.scss
@@ -13,7 +13,7 @@
 @import "yolo/syntax";
 @import "yolo/images";
 @import "yolo/lightbox";
-@import "yolo/sidebar";
+@import "yolo/navigation";
 @import "yolo/yolo";
 
 #yolo-site {
