--- a/_sass/yolo/_navigation.scss
+++ b/_sass/yolo/_navigation.scss
@@ -13,9 +13,6 @@
   border-left-width: 0;
   border-top-width: 0;
   border-bottom-width: 0;
-  &:is(:hover) {
-    cursor: pointer;
-  }
   &:is(.open) {
     border-right-width: .1rem;
   }
@@ -25,19 +22,23 @@
     padding: 1.5em .5em;
     overflow-x: hidden;
     transition: 0.2s;
-    nav {
-      ul {
-        line-height: 1;
-        list-style-type: none;
-        margin-bottom: 0;
-        padding: 1rem 1rem 0;
-        li {
-          margin-bottom: 1rem;
-        }
-        li:before {
-          content: "- ";
-        }
-      }
+  }
+}
+
+.nav-menu {
+  ul {
+    line-height: 1;
+    list-style-type: none;
+    margin-bottom: 0;
+    padding: 0.75rem 1rem 0;
+    li {
+      margin-bottom: 0.75rem;
     }
+    li:before {
+      content: "- ";
+    }
+  }
+  &:is(:hover) {
+    cursor: pointer;
   }
 }
