sidebar, toc, tcu theme

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,4 +1,5 @@
 <div id="sidebar" class="sidebar">
+    <div id="sidebar-close" class="close">&times;</div>
     <div class="inner">
         <div id="toc-sidebar"></div>
     </div>
