--- a/_sass/yolo/_navigation.scss
+++ b/_sass/yolo/_navigation.scss
@@ -16,10 +16,20 @@
   &:is(.open) {
     border-right-width: .1rem;
   }
+  > .close {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+    &:is(:hover) {
+      cursor: pointer;
+    }
+  }
   > .inner {
-    width: 100%;
+    width: auto;
     height: 100%;
-    padding: 1.5em .5em;
+    margin: 1.5em;
     overflow-x: hidden;
     transition: 0.2s;
   }
@@ -37,8 +47,5 @@
     li:before {
       content: "- ";
     }
-  }
-  &:is(:hover) {
-    cursor: pointer;
   }
 }
