--- a/_sass/yolo/themes/_corbs.scss
+++ b/_sass/yolo/themes/_corbs.scss
@@ -15,9 +15,9 @@ $dark-secondary-color: #fb1d9e;
 $dark-accent-color: #00b0ff;
 $dark-link-color: #65e9fc;
 $dark-code-background-color: #01081f;
-$dark-code-color: #f790c2;
+$dark-code-color: #b388ff;
 
 // fonts
-$family-primary: "IBM Plex Mono", monospace;
+$family-primary: "JetBrains Mono", monospace;
 $family-secondary: "Raleway", sans-serif;
-$family-monospace: "Red Hat Mono", monospace;
+$family-monospace: "Inconsolata", monospace;
