--- a/_sass/yolo/themes/_arcade.scss
+++ b/_sass/yolo/themes/_arcade.scss
@@ -7,6 +7,7 @@ $light-accent-color: #4113a6;
 $light-code-background-color: #fff;
 $light-code-color: #01a6c8;
 $light-link-color: #02c162;
+$light-sidebar-color: #f4f0f8;
 
 $dark-primary-color: #000928;
 $dark-secondary-color: #00e676;
@@ -14,6 +15,7 @@ $dark-accent-color: #697df8;
 $dark-code-background-color: #00080f;
 $dark-code-color: #65e9fc;
 $dark-link-color: #ff31b9;
+$dark-sidebar-color: #000;
 
 // fonts
 $family-primary: "Inconsolata", sans-serif;
