--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,13 @@
 <div id="sidebar" class="sidebar">
-    <div id="sidebar-close" class="close">&times;</div>
+<!--    <div id="sidebar-close" class="close">&times;</div>-->
     <div class="inner">
+        {% if site.sidebar.logo %}
+        <div class="sidebar-logo">
+            <a href="./">
+                <img class="is-circle-128" alt="sidebar-logo" src="{{ site.sidebar.logo }}" title="Sidebar Logo"/>
+            </a>
+        </div>
+        {% endif %}
         <div id="toc-sidebar"></div>
     </div>
 </div>
