--- a/_sass/yolo/themes/_corbs.scss
+++ b/_sass/yolo/themes/_corbs.scss
@@ -8,6 +8,7 @@ $light-accent-color: #0091ea;
 $light-link-color: #ed1292;
 $light-code-background-color: #f8faff;
 $light-code-color: #6843c8;
+$light-sidebar-color: #e1f5fe;
 
 // dark mode colors
 $dark-primary-color: #000928;
@@ -16,6 +17,7 @@ $dark-accent-color: #00b0ff;
 $dark-link-color: #65e9fc;
 $dark-code-background-color: #01081f;
 $dark-code-color: #b388ff;
+$dark-sidebar-color: #000110;
 
 // fonts
 $family-primary: "JetBrains Mono", monospace;
