--- a/_sass/yolo/themes/_tcu.scss
+++ b/_sass/yolo/themes/_tcu.scss
@@ -8,6 +8,7 @@ $light-accent-color: #502eb9;
 $light-link-color: #1f56d8;
 $light-code-background-color: #f4f5fb;
 $light-code-color: #6843c8;
+$light-sidebar-color: #f3f4fa;
 
 // dark mode colors
 $dark-primary-color: #1a0037;
@@ -16,6 +17,7 @@ $dark-accent-color: #8f67fe;
 $dark-link-color: #65e9fc;
 $dark-code-background-color: #100020;
 $dark-code-color: #b4a9e9;
+$dark-sidebar-color: #05000c;
 
 // fonts
 $family-primary: "IBM Plex Mono", monospace;
