README with screenshots

--- a/_sass/yolo/themes/_arcade.scss
+++ b/_sass/yolo/themes/_arcade.scss
@@ -7,7 +7,7 @@ $light-accent-color: #4113a6;
 $light-code-background-color: #fff;
 $light-code-color: #01a6c8;
 $light-link-color: #02c162;
-$light-sidebar-color: #f4f0f8;
+$light-sidebar-color: #e1f5fe;
 
 $dark-primary-color: #000928;
 $dark-secondary-color: #00e676;
