--- a/_sass/yolo/themes/_weekly.scss
+++ b/_sass/yolo/themes/_weekly.scss
@@ -8,6 +8,7 @@ $light-accent-color: #1a237e;
 $light-link-color: #0091ea;
 $light-code-background-color: #fafafa;
 $light-code-color: #000928;
+$light-sidebar-color: #e1f5fe;
 
 // dark mode colors
 $dark-primary-color: #020b14;
@@ -16,6 +17,7 @@ $dark-accent-color: #17a3f7;
 $dark-link-color: #65e9fc;
 $dark-code-background-color: #000a12;
 $dark-code-color: #c4feee;
+$dark-sidebar-color: #000;
 
 // fonts
 $family-primary: "Bitter", serif;
