disable inner scroll

--- a/_sass/yolo/_sidebar.scss
+++ b/_sass/yolo/_sidebar.scss
@@ -28,6 +28,7 @@
     height: 100%;
     margin: 1.5rem;
     overflow-x: hidden;
+    overflow-y: hidden;
     transition: 0.2s;
 
     .sidebar-logo {
