--- a/_includes/components/footer.html
+++ b/_includes/components/footer.html
@@ -1,4 +1,4 @@
 <div class="footer">
     <hr/>
-    <p>{{ site.tag_text }} {{ site.version }} built {{ "now" | date: "%Y-%m-%d %H:%M" }}</p>
+    <p>{{ site.name }} {{ site.version }} built {{ "now" | date: "%Y-%m-%d %H:%M" }}</p>
 </div>
