--- a/_sass/yolo/_base.scss
+++ b/_sass/yolo/_base.scss
@@ -149,3 +149,13 @@ td {
   text-align: left;
   padding: 0.3em 0.4em 0.3em 0.4em;
 }
+
+/*
+ * Added by corbs
+ */
+figure {
+  figcaption {
+    padding-top: 0.25em;
+    padding-bottom: 0.25em;
+  }
+}
