--- a/css/main.scss
+++ b/css/main.scss
@@ -15,6 +15,8 @@
 @import "yolo/lightbox";
 @import "yolo/navigation";
 @import "yolo/yolo";
+@import "yolo/dark";
+@import "yolo/light";
 
 {% if site.sidebar %}
 @import "yolo/sidebar";
