--- a/_sass/yolo/themes/_corbs.scss
+++ b/_sass/yolo/themes/_corbs.scss
@@ -21,5 +21,5 @@ $dark-sidebar-color: #000110;
 
 // fonts
 $family-primary: "JetBrains Mono", monospace;
-$family-secondary: "Raleway", sans-serif;
+$family-secondary: "Poppins", sans-serif;
 $family-monospace: "Inconsolata", monospace;
